--- a/rootdir/ueventd.mt6589.rc
+++ b/rootdir/ueventd.mt6589.rc
@@ -113,8 +113,8 @@
 /dev/eemcs*               0660   ccci       ccci
 
 # SGX device node
-/dev/pvrsrvkm             0666   root       root
-/dev/pvr_sync             0666   root       root
+/dev/pvrsrvkm             0666    system graphics
+/dev/pvr_sync             0666    system graphics
 
 # CDMA radio interface MUX
 /dev/ts0710mux*           0640   radio      radio
