--- a/rootdir/init.modem.rc
+++ b/rootdir/init.modem.rc
@@ -1,8 +1,8 @@
 on post-fs-data
     # Modem related device nodes
-    mkdir /data/nvram/md 0770 root system
-    mkdir /data/nvram/md2 0770 root system
-    chown radio radio /sys/kernel/ccci/boot
+    mkdir /data/nvram/md  0770 root nvram
+    mkdir /data/nvram/md2 0770 root nvram
+
     # xplod: this is not in the original mtk file... But I have no
     # idea what kind of sorcery normally sets them
     chown radio radio /dev/ccci_fs
@@ -17,22 +17,26 @@ on post-fs-data
     chown radio radio /dev/ccci_uem_rx
     chown radio radio /dev/ccci_uem_tx
 
+    chown ccci ccci /sys/kernel/ccci/boot
+
+    # Encrypt phone function
+    setprop vold.post_fs_data_done 1
 service gsm0710muxd /system/bin/gsm0710muxd -s /dev/ttyC0 -f 512 -n 8 -m basic
     class core
     user root
-    group radio cache inet misc
+    group radio cache inet misc ccci
     disabled
 
 service gsm0710muxdmd2 /system/bin/gsm0710muxdmd2 -s /dev/ccci2_tty0 -f 512 -n 8 -m basic
     class core
     user root
-    group radio cache inet misc
+    group radio cache inet misc ccci
     disabled
 
 service muxreport-daemon /system/bin/muxreport
     class core
     user radio
-    group radio cache inet misc
+    group radio cache inet misc ccci
     disabled
     oneshot
 
@@ -47,7 +51,7 @@ service ril-daemon /system/bin/rild
     socket rild-mtk-modem stream 660 radio system
     socket rild-atci stream 660 root radio
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log system
+    group radio cache inet misc audio sdcard_r sdcard_rw log ccci
     disabled
 
 service ril-daemon-md2 /system/bin/rildmd2
@@ -61,7 +65,7 @@ service ril-daemon-md2 /system/bin/rildmd2
     socket rild-mtk-modem-md2 stream 660 radio system
     socket rild-atci-md2 stream 660 root radio
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log system
+    group radio cache inet misc audio sdcard_r sdcard_rw log ccci
     disabled
 
 service md_minilog_util /system/bin/md_minilog_util
@@ -80,26 +84,26 @@ service permission_check /system/bin/permission_check
     oneshot
 
 service ccci_fsd /system/bin/ccci_fsd 0
-    user root
-    group radio system
+    user ccci
+    group  nvram ccci system
     class core
     oneshot
 
 service ccci2_fsd /system/bin/ccci_fsd 1
-    user root
-    group radio system
+    user ccci
+    group  nvram ccci system
     class core
     oneshot
 
-service ccci_mdinit /system/bin/logwrapper /system/xbin/strace -s 1024 /system/bin/ccci_mdinit 0
-    user root
-    group radio system
+service ccci_mdinit /system/bin/ccci_mdinit 0
+    user system
+    group ccci system
     class core
     oneshot
 
 service ccci2_mdinit /system/bin/ccci_mdinit 1
-    user root
-    group radio system
+    user system
+    group ccci system
     class core
     oneshot
 
@@ -118,7 +122,7 @@ service pppd /system/bin/pppd file /data/misc/ppp/ppp_options
 service terservice /system/bin/terservice
     class core
     user radio
-    group radio cache inet misc
+    group radio cache inet misc ccci
     oneshot
 
 #
